--- a/lora.ipynb
+++ b/lora.ipynb
@@ -51,7 +51,82 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to ./data/MNIST/raw/train-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 9912422/9912422 [00:00<00:00, 38131449.90it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data/MNIST/raw/train-images-idx3-ubyte.gz to ./data/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to ./data/MNIST/raw/train-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 28881/28881 [00:00<00:00, 86156254.50it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data/MNIST/raw/train-labels-idx1-ubyte.gz to ./data/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to ./data/MNIST/raw/t10k-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1648877/1648877 [00:00<00:00, 14679681.18it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data/MNIST/raw/t10k-images-idx3-ubyte.gz to ./data/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to ./data/MNIST/raw/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4542/4542 [00:00<00:00, 2456231.15it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data/MNIST/raw/t10k-labels-idx1-ubyte.gz to ./data/MNIST/raw\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "transform = transforms.Compose([transforms.ToTensor(), transforms.Normalize((0.1307,), (0.3081,))])\n",
     "\n",
@@ -82,7 +157,7 @@
    "outputs": [],
    "source": [
     "# Create an overly expensive neural network to classify MNIST digits\n",
-    "# Daddy got money, so I don't care about efficiency\n",
+    "\n",
     "class RichBoyNet(nn.Module):\n",
     "    def __init__(self, hidden_size_1=1000, hidden_size_2=2000):\n",
     "        super(RichBoyNet,self).__init__()\n",
@@ -117,7 +192,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1: 100%|██████████| 6000/6000 [00:23<00:00, 250.83it/s, loss=0.238]\n"
+      "Epoch 1: 100%|██████████| 6000/6000 [01:01<00:00, 96.99it/s, loss=0.238] \n"
      ]
     }
    ],
@@ -193,31 +268,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Testing:   0%|          | 0/1000 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Testing: 100%|██████████| 1000/1000 [00:02<00:00, 441.71it/s]"
+      "Testing: 100%|██████████| 1000/1000 [00:02<00:00, 461.19it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.953\n",
-      "wrong counts for the digit 0: 33\n",
-      "wrong counts for the digit 1: 28\n",
-      "wrong counts for the digit 2: 42\n",
-      "wrong counts for the digit 3: 95\n",
-      "wrong counts for the digit 4: 19\n",
-      "wrong counts for the digit 5: 10\n",
-      "wrong counts for the digit 6: 61\n",
-      "wrong counts for the digit 7: 52\n",
-      "wrong counts for the digit 8: 19\n",
-      "wrong counts for the digit 9: 107\n"
+      "Accuracy: 0.964\n",
+      "wrong counts for the digit 0: 11\n",
+      "wrong counts for the digit 1: 15\n",
+      "wrong counts for the digit 2: 37\n",
+      "wrong counts for the digit 3: 62\n",
+      "wrong counts for the digit 4: 20\n",
+      "wrong counts for the digit 5: 34\n",
+      "wrong counts for the digit 6: 35\n",
+      "wrong counts for the digit 7: 43\n",
+      "wrong counts for the digit 8: 15\n",
+      "wrong counts for the digit 9: 84\n"
      ]
     },
     {
@@ -442,14 +510,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1:   0%|          | 0/100 [00:00<?, ?it/s, loss=0.188] "
+      "Epoch 1:   0%|          | 0/595 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1:  99%|█████████▉| 99/100 [00:00<00:00, 238.78it/s, loss=0.089] \n"
+      "Epoch 1:  99%|█████████▉| 99/100 [00:01<00:00, 69.07it/s, loss=0.12] \n"
      ]
     }
    ],
@@ -517,24 +585,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Testing: 100%|██████████| 1000/1000 [00:02<00:00, 339.57it/s]"
+      "Testing: 100%|██████████| 1000/1000 [00:07<00:00, 132.49it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.843\n",
-      "wrong counts for the digit 0: 53\n",
-      "wrong counts for the digit 1: 32\n",
-      "wrong counts for the digit 2: 60\n",
-      "wrong counts for the digit 3: 201\n",
-      "wrong counts for the digit 4: 186\n",
-      "wrong counts for the digit 5: 85\n",
-      "wrong counts for the digit 6: 69\n",
-      "wrong counts for the digit 7: 677\n",
-      "wrong counts for the digit 8: 193\n",
-      "wrong counts for the digit 9: 11\n"
+      "Accuracy: 0.957\n",
+      "wrong counts for the digit 0: 24\n",
+      "wrong counts for the digit 1: 19\n",
+      "wrong counts for the digit 2: 44\n",
+      "wrong counts for the digit 3: 53\n",
+      "wrong counts for the digit 4: 83\n",
+      "wrong counts for the digit 5: 36\n",
+      "wrong counts for the digit 6: 53\n",
+      "wrong counts for the digit 7: 60\n",
+      "wrong counts for the digit 8: 41\n",
+      "wrong counts for the digit 9: 21\n"
      ]
     },
     {
@@ -560,31 +628,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Testing: 100%|██████████| 1000/1000 [00:03<00:00, 312.94it/s]"
+      "Testing: 100%|██████████| 1000/1000 [00:02<00:00, 376.53it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.953\n",
-      "wrong counts for the digit 0: 33\n",
-      "wrong counts for the digit 1: 28\n",
-      "wrong counts for the digit 2: 42\n",
-      "wrong counts for the digit 3: 95\n",
-      "wrong counts for the digit 4: 19\n",
-      "wrong counts for the digit 5: 10\n",
-      "wrong counts for the digit 6: 61\n",
-      "wrong counts for the digit 7: 52\n",
-      "wrong counts for the digit 8: 19\n",
-      "wrong counts for the digit 9: 107\n"
+      "Accuracy: 0.964\n",
+      "wrong counts for the digit 0: 11\n",
+      "wrong counts for the digit 1: 15\n",
+      "wrong counts for the digit 2: 37\n",
+      "wrong counts for the digit 3: 62\n",
+      "wrong counts for the digit 4: 20\n",
+      "wrong counts for the digit 5: 34\n",
+      "wrong counts for the digit 6: 35\n",
+      "wrong counts for the digit 7: 43\n",
+      "wrong counts for the digit 8: 15\n",
+      "wrong counts for the digit 9: 84\n"
      ]
     },
     {
@@ -618,7 +686,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
