--- a/svd.ipynb
+++ b/svd.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,33 +27,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-1.0797,  0.5545,  0.8058, -0.7140, -0.1518,  1.0773,  2.3690,  0.8486,\n",
-      "         -1.1825, -3.2632],\n",
-      "        [-0.3303,  0.2283,  0.4145, -0.1924, -0.0215,  0.3276,  0.7926,  0.2233,\n",
-      "         -0.3422, -0.9614],\n",
-      "        [-0.5256,  0.9864,  2.4447, -0.0290,  0.2305,  0.5000,  1.9831, -0.0311,\n",
-      "         -0.3369, -1.1376],\n",
-      "        [ 0.7900, -1.1336, -2.6746,  0.1988, -0.1982, -0.7634, -2.5763, -0.1696,\n",
-      "          0.6227,  1.9294],\n",
-      "        [ 0.1258,  0.1458,  0.5090,  0.1768,  0.1071, -0.1327, -0.0323, -0.2294,\n",
-      "          0.2079,  0.5128],\n",
-      "        [ 0.7697,  0.0050,  0.5725,  0.6870,  0.2783, -0.7818, -1.2253, -0.8533,\n",
-      "          0.9765,  2.5786],\n",
-      "        [ 1.4157, -0.7814, -1.2121,  0.9120,  0.1760, -1.4108, -3.1692, -1.0791,\n",
-      "          1.5325,  4.2447],\n",
-      "        [-0.0119,  0.6050,  1.7245,  0.2584,  0.2528, -0.0086,  0.7198, -0.3620,\n",
-      "          0.1865,  0.3410],\n",
-      "        [ 1.0485, -0.6394, -1.0715,  0.6485,  0.1046, -1.0427, -2.4174, -0.7615,\n",
-      "          1.1147,  3.1054],\n",
-      "        [ 0.9088,  0.1936,  1.2136,  0.8946,  0.4084, -0.9295, -1.2294, -1.1239,\n",
-      "          1.2155,  3.1628]])\n"
+      "tensor([[ 0.2355,  0.1049,  0.0277,  0.2717, -0.1069,  0.3124,  0.2668,  0.1211,\n",
+      "         -0.9132,  0.2465],\n",
+      "        [ 0.8507,  0.5331,  0.0902,  0.5400, -0.4245,  1.0022,  1.0993,  0.4476,\n",
+      "         -3.0183,  1.0352],\n",
+      "        [-0.2607, -0.4673, -0.0085,  0.7045,  0.2058, -0.0584, -0.6039, -0.1573,\n",
+      "          0.3727, -0.6024],\n",
+      "        [-0.3829, -0.9508,  0.0042,  1.7915,  0.3681,  0.1304, -1.1195, -0.2485,\n",
+      "          0.0672, -1.1328],\n",
+      "        [ 0.1658,  1.1941, -0.0511, -3.0148, -0.3542, -0.6964,  1.1723,  0.1595,\n",
+      "          1.3917,  1.2245],\n",
+      "        [ 0.6174,  0.9482,  0.0301, -1.2144, -0.4478,  0.2682,  1.2910,  0.3620,\n",
+      "         -1.1710,  1.2778],\n",
+      "        [-0.8711, -0.3998, -0.1016, -0.9711,  0.3983, -1.1457, -0.9972, -0.4486,\n",
+      "          3.3560, -0.9229],\n",
+      "        [-0.7299, -0.7823, -0.0569,  0.4664,  0.4451, -0.5942, -1.2286, -0.4055,\n",
+      "          1.9997, -1.1929],\n",
+      "        [-0.5895, -0.9108, -0.0284,  1.1752,  0.4290, -0.2516, -1.2375, -0.3460,\n",
+      "          1.1083, -1.2252],\n",
+      "        [ 0.7297,  0.6084,  0.0679,  0.0306, -0.4017,  0.7359,  1.0757,  0.3939,\n",
+      "         -2.3142,  1.0297]])\n"
      ]
     }
    ],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -145,12 +145,12 @@
      "output_type": "stream",
      "text": [
       "Original y using W:\n",
-      " tensor([ 7.2684e+00,  2.3162e+00,  7.7151e+00, -1.0446e+01, -8.1639e-03,\n",
-      "        -3.7270e+00, -1.1146e+01,  2.0207e+00, -9.6258e+00, -4.1163e+00])\n",
+      " tensor([ 0.1179, -3.5418,  2.4757,  5.2276, -5.0896, -6.7406,  5.7523,  5.8828,\n",
+      "         5.4308, -5.6584])\n",
       "\n",
       "y' computed using BA:\n",
-      " tensor([ 7.2684e+00,  2.3162e+00,  7.7151e+00, -1.0446e+01, -8.1638e-03,\n",
-      "        -3.7270e+00, -1.1146e+01,  2.0207e+00, -9.6258e+00, -4.1163e+00])\n"
+      " tensor([ 0.1179, -3.5418,  2.4757,  5.2276, -5.0896, -6.7406,  5.7523,  5.8828,\n",
+      "         5.4308, -5.6584])\n"
      ]
     }
    ],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
